--- a/views/year.ejs
+++ b/views/year.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/templates/header.ejs') %>
 
 <h1><%= pageTitle %> </h1>
-
+<h2><%= userAge %> </h2>
 <h2><%= greeting %> </h2>
